tests/negative/contexts/invalid_test_context.orng
// invalid_test_context.orng:7:31: error: can't request this context
// test "my test" with My_Context {
//                              ^
// 
context My_Context = Int

test "my test" with My_Context {
    .ok
}